# METRO-UI

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  README.md  build.bat  gitignore
.github/workflows/: build.yml
JUCE/: CHANGE_LIST.md  CMakeLists.txt
JUCE/examples/CMake/AudioPlugin/: CMakeLists.txt
JUCE/examples/DemoRunner/: DemoRunner.jucer
JUCE/examples/DemoRunner/Builds/MacOSX/: Info-App.plist
JUCE/examples/DemoRunner/Builds/VisualStudio2019/: DemoRunner_App.vcxproj
JUCE/examples/DemoRunner/Builds/VisualStudio2022/: DemoRunner_App.vcxproj  resources.rc
JUCE/examples/DemoRunner/Builds/VisualStudio2026/: DemoRunner_App.vcxproj
JUCE/examples/DemoRunner/Builds/iOS/: Info-App.plist
JUCE/examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2022/: AudioPerformanceTest_App.vcxproj
JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2026/: AudioPerformanceTest_App.vcxproj
JUCE/extras/AudioPluginHost/: CMakeLists.txt
JUCE/extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj
JUCE/extras/AudioPluginHost/Builds/VisualStudio2022/: AudioPluginHost_App.vcxproj
JUCE/extras/AudioPluginHost/Builds/VisualStudio2026/: AudioPluginHost_App.vcxproj
JUCE/extras/BinaryBuilder/Builds/VisualStudio2022/: BinaryBuilder_ConsoleApp.vcxproj
JUCE/extras/BinaryBuilder/Builds/VisualStudio2026/: BinaryBuilder_ConsoleApp.vcxproj
JUCE/extras/NetworkGraphicsDemo/Builds/VisualStudio2022/: NetworkGraphicsDemo_App.vcxproj
JUCE/extras/NetworkGraphicsDemo/Builds/VisualStudio2026/: NetworkGraphicsDemo_App.vcxproj
JUCE/extras/Projucer/: CMakeLists.txt  Projucer.jucer
JUCE/extras/Projucer/Builds/MacOSX/: Info-App.plist
JUCE/extras/Projucer/Builds/VisualStudio2019/: Projucer_App.vcxproj
JUCE/extras/Projucer/Builds/VisualStudio2022/: Projucer_App.vcxproj
JUCE/extras/Projucer/Builds/VisualStudio2026/: Projucer_App.vcxproj  resources.rc
JUCE/extras/Projucer/JuceLibraryCode/: JuceHeader.h
JUCE/modules/juce_analytics/: juce_analytics.h
JUCE/modules/juce_animation/: juce_animation.h
JUCE/modules/juce_audio_basics/: juce_audio_basics.h
JUCE/modules/juce_audio_basics/midi/: juce_MidiMessage.cpp
JUCE/modules/juce_audio_devices/: juce_audio_devices.h
JUCE/modules/juce_audio_devices/native/: juce_Midi_windows.cpp
JUCE/modules/juce_audio_formats/: juce_audio_formats.h
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h
JUCE/modules/juce_audio_processors/: juce_audio_processors.h
JUCE/modules/juce_audio_processors_headless/: juce_audio_processors_headless.h
JUCE/modules/juce_audio_processors_headless/format_types/: juce_VST3PluginFormatHeadless.cpp
JUCE/modules/juce_audio_utils/: juce_audio_utils.h
JUCE/modules/juce_box2d/: juce_box2d.h
JUCE/modules/juce_core/: juce_core.h
JUCE/modules/juce_core/system/: juce_StandardHeader.h
JUCE/modules/juce_cryptography/: juce_cryptography.h
JUCE/modules/juce_data_structures/: juce_data_structures.h
JUCE/modules/juce_dsp/: juce_dsp.h
JUCE/modules/juce_events/: juce_events.h
JUCE/modules/juce_graphics/: juce_graphics.h
JUCE/modules/juce_graphics/native/: juce_Direct2DGraphicsContext_windows.cpp
JUCE/modules/juce_gui_basics/: juce_gui_basics.h
JUCE/modules/juce_gui_basics/components/: juce_Component.cpp
JUCE/modules/juce_gui_basics/native/: juce_Windowing_mac.mm  juce_Windowing_windows.cpp
JUCE/modules/juce_gui_extra/: juce_gui_extra.h
JUCE/modules/juce_javascript/: juce_javascript.h
JUCE/modules/juce_midi_ci/: juce_midi_ci.h
JUCE/modules/juce_opengl/: juce_opengl.h
JUCE/modules/juce_osc/: juce_osc.h
JUCE/modules/juce_product_unlocking/: juce_product_unlocking.h
JUCE/modules/juce_video/: juce_video.h
bungee/: CMakeLists.txt  README.md  libbungee.pc.in
bungee/.github/workflows/: release-apple.sh
docs/: USER_MANUAL.md
signalsmith-stretch/: CMakeLists.txt
signalsmith-stretch/cmd/util/: CMakeLists.txt  console-colours.h  memory-tracker.h  simple-args.h  stop-denormals.h  stopwatch.h  wav.h
src/: CrashLogger.h  DefaultSample.h  DysektMidi2Port.h  MidiLearnManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TrimSession.h  UndoManager.h
src/audio/: AdsrEnvelope.h  AudioAnalysis.h  GrainEngine.cpp  LazyChopEngine.cpp  LazyChopEngine.h  SampleData.cpp  SampleData.h  SfzLayoutClassifier.h  SfzPlayer.cpp  SfzPlayer.h  SfzZoneColours.h  Slice.h  SliceManager.cpp  SliceManager.h  SoundFontLoader.cpp  SoundFontLoader.h  Voice.h  VoicePool.cpp  VoicePool.h  chowdsp_svf_filters.h
src/metro/: FloatingTransportBar.cpp  FloatingTransportBar.h  MetroArrangementView.cpp  MetroArrangementView.h  MetroColours.h  MetroContent.h  MetroIcons.h  MetroInspector.cpp  MetroInspector.h  MetroLookAndFeel.cpp  MetroLookAndFeel.h  MetroMetrics.h  MetroSelection.h  MetroSidebar.cpp  MetroSidebar.h  MetroStandaloneEditor.cpp  MetroStandaloneEditor.h  MetroTheme.cpp  MetroTheme.h  MetroTransportBar.cpp  MetroTransportBar.h  MetroTypography.h
src/params/: ParamIds.h  ParamLayout.cpp
src/sequencer/: AbletonLink.h  MidiClip.cpp  MidiClip.h  SequencerEngine.cpp  SequencerEngine.h  SequencerEngine_additions.cpp  SequencerTrack.h
src/standalone/: Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.h.bak  MidiRouter.h
src/ui/: ActionPanel.cpp  ActionPanel.h  AddZoneOverlay.h  ArchiveIntegration.cpp  ArchiveIntegration.h  ArchiveUrlOverlay.h  ArrangeView.h  ArrangeView_patch.cpp  ConfirmOverlay.h  DualLcdControlFrame.cpp  DualLcdControlFrame.h  DysektLookAndFeel.cpp  DysektLookAndFeel.h  FileBrowserPanel.cpp  FileBrowserPanel.h  FloatingTransportBar.cpp  FloatingTransportBar.h  GlobalEqPanel.cpp  GlobalEqPanel.h  HeaderBar.cpp  HeaderBar.h  IconManager.cpp  IconManager.h  KeysPanel.cpp  KeysPanel.h  LcdColours.h  LogoBar.cpp  LogoBar.h  LogoIcon.h  MessageOverlay.h  MidiLearnDialog.cpp  MidiLearnDialog.h  MixerPanel.cpp  MixerPanel.h  PadGridView.cpp  PadGridView.h  PianoRollComponent.h  PianoRollPanel.h  PluginEditorConstants.h  RenameOverlay.h  (+51 more)
(+23 files in other folders)
